# XFileUnpacker

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  THANKS.md  changelog.txt
.github/workflows/: builder.yml
packaging/windows/: build_portable_windows.cmd
res/: license.txt  readme.txt
res/linux/: xfileunpacker.desktop.in
res/windows/: resource.rc  resource_icon.rc
run/: build.bat
src/: CMakeLists.txt  global.h
src/cli/: CMakeLists.txt  main_cli.cpp
src/console/: CMakeLists.txt  main_console.cpp
src/gui/: CMakeLists.txt  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp
translations/: xfileunpacker_ja_JP.ts
